# syt5-gek1011-timecritical-datatransmission-pdamianik-pelias-

./: README.md
pico-template/: .gitignore  CMakeLists.txt
pico-template/ampel-freertos/: CMakeLists.txt  main.c
pico-template/ampel-freertos-master/: CMakeLists.txt  main.c
pico-template/ampel-freertos-slave/: CMakeLists.txt  main.c
pico-template/freertos/: CMakeLists.txt
pico-template2/: CMakeLists.txt
pico-template2/ampel-freertos/: main.c
